package edu.hitsz.aircraft;

public interface EnemyFactory {
    public abstract EnemyAircraft createEnemy();
}
